A finir -> [FINI]: Header <-> Home+About : alignement sur les dimensions EXCEPTIONNELLES. En cours : 1. (Début) Correction du soucis de redirection de la page NotFound. 2. Envisager le début de la version tablette, commencer par modifier le _mixins & potentiellement _variables. 3. màj sur ce que je dois faire/ne pas faire.

--- a/kasa/src/scss/FicheLogement.scss
+++ b/kasa/src/scss/FicheLogement.scss
@@ -101,7 +101,8 @@
 
 .titre1 {
   color: #ff6060;
-  font-size: 3vw; /* Adjusted for responsiveness */
+  font-size: 2.5vw; /* Adjusted for responsiveness */
+  font-weight: bolder;
   margin-right: auto;
 }
 
@@ -121,7 +122,7 @@
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-  padding-top: 2vh;
+  padding-top: 5vh;
 }
 
 .note-container {
@@ -142,7 +143,7 @@
     align-items: center; /* Alignement centré */
     padding-top: 4vw;
     padding-left: 3%;
-    padding-right: 3%;
+    padding-right: 1.75%;
     width: 100%;
     margin: 0 auto;
     position: relative; /* Ajouté pour permettre la position absolue des enfants */
@@ -333,17 +334,17 @@
     background: #ff6060;
     border-radius: 1em;
     height: 25px;
-    font-size: 5px;
-  }
+    font-size: 8px;
+}
 
   .star {
     padding: 2px;
     font-size: 1em;
     width: 25px;
     height: 2em;
-    padding-right: 0px;
+    padding-right: 4px;
     margin-top: -9em;
-    margin-left: 6px;
+    margin-left: 0px;
   }
 
   .profile-pic-container {
